# comment_free

./: CMakeLists.txt  LICENSE  README.md  build.sh
backend/: CMakeLists.txt  main.cpp
backend/server/: db.cpp  db.hpp  http_server.cpp  http_server.hpp  routes.cpp  routes.hpp  utils.cpp  utils.hpp
frontend/: index.html  style.css  view.html  write.html
sql/: create_tables.sql  init_database.sql
